{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "5788c50e-59f1-427c-b75f-8228b15b41de",
            "actions": [
                {
                    "name": "GamepadHorizontal",
                    "type": "Value",
                    "id": "47432f98-2042-423c-9918-a785c226e988",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyboardHorizontal",
                    "type": "Value",
                    "id": "76e313eb-c373-45b2-a386-636ea238bf6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "1910bacd-182b-4d96-a846-408f5be0df28",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePointer",
                    "type": "Value",
                    "id": "a188a122-3444-4864-a3eb-047b2b2462c7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EnableController",
                    "type": "Button",
                    "id": "36af2553-05f7-42a3-8f21-dd43632a29c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "29115e59-6838-4aa9-8bb1-af198d0f32cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeaderBoard",
                    "type": "Button",
                    "id": "edca9ceb-5606-42e0-bcff-b212811ae3dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e77e280e-c110-4f01-9d70-cf47f11c33ce",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamepadHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "811c6440-5e08-46fb-9bb7-b60ed9cfe6d9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a12d959a-8038-44ca-9769-df61695e026d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e6a0419-abe6-47ea-bec5-87fc72291618",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableController",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "f64da26e-b1ea-4d85-a69d-db1f7071eac6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "00b99a97-6e9c-4478-b7e6-afbabb4311e8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "507a2ead-3a26-421e-9323-b74579c86cba",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "046498f5-7cf6-4f96-b74d-db29737bfdd6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ae6090d-e7bd-4fc3-ac8c-9de49360b232",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4b6c595-0cdc-4a06-9987-92b22cc911b9",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaderBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c6a8dc3-b373-4729-84a0-f95e076fee39",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaderBoard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}